# Forkitech-test-task

./: .gitignore  README.md  docker-compose.yml
ci-cd/: webapp.Dockerfile
env/: .env.example  .test.env.example
src/webapp/: alembic.ini  main.py  pyproject.toml  pytest.ini
src/webapp/config/: database.py  settings.py
src/webapp/migrations/: env.py
src/webapp/migrations/versions/: 2025_01_26_0718-13a1cde68db5_add_tron_address_history.py  2025_01_26_0730-66632b5d4008_add_created_at_field.py
src/webapp/tests/: conftest.py  test_tron_api.py
src/webapp/tron_api/: models.py  router.py  schemas.py  services.py
