[tool.poetry]
name = "forkitech-test-task"
version = "0.1.0"
description = "simple webapp with two endpoint for info about tron"
authors = ["Simon Druchinin"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
