[tool.poetry]
name = "forkitech-test-task"
version = "0.1.0"
description = "simple webapp with two endpoint for info about tron"
authors = ["Simon Druchinin"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.7"}
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
tronpy = "^0.5.0"
pydantic-settings = "^2.7.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.9.3"

[tool.ruff]
preview = false
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "A", "Q", "B", "COM", "C4", "DJ", "FIX", "PIE", "T20", "PT", "RET", "SIM", "N", "ERA", "ISC", "I"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.field_validator"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["Depends", "fastapi.Depends", "fastapi.params.Depends"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
